--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -1764,9 +1764,9 @@ tr.summary-details-excluded {
   text-indent: -999em;
   width: 69px; }
   .rating-box .rating {
+    background: url(../images/bkg_rating.gif) repeat-x 0 100%;
     float: left;
-    height: 13px;
-    background: url(../images/bkg_rating.gif) repeat-x 0 100%; }
+    height: 13px; }
 
 .ratings-table th, .ratings-table td {
   font-size: 0.917em;
